--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@ html, body {
 
 body {
   background: url("background.jpg") center/cover no-repeat;
+  transition: filter 0.3s ease;
+}
+
+body.blurred {
+  filter: blur(5px);
 }
 
 /* ================= LOGIN ================= */
@@ -136,6 +141,40 @@ body {
 .sidebar-item:hover {
   background: rgba(255,255,255,0.1);
 }
+
+/* ================= PHOTO GRID ================= */
+#photoGrid {
+  position: fixed;
+  inset: 80px 10px 10px 10px;
+  display: none;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 10px;
+  z-index: 998;
+}
+
+#photoGrid img {
+  width: 100%;
+  height: 110px;
+  object-fit: cover;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* ================= FULLSCREEN VIEW ================= */
+#photoViewer {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.95);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1001;
+}
+
+#photoViewer img {
+  max-width: 95%;
+  max-height: 95%;
+}
 </style>
 </head>
 
@@ -160,7 +199,7 @@ body {
 
 <!-- SIDEBAR -->
 <div id="sidebar">
-  <div class="sidebar-item" onclick="openPhotosPage()">📷 Photos</div>
+  <div class="sidebar-item" onclick="openPhotos()">📷 Photos</div>
 </div>
 
 <!-- EQUALIZER -->
@@ -176,6 +215,8 @@ body {
 <audio id="bgMusic" loop muted>
   <source src="music.mp3" type="audio/mpeg">
 </audio>
+
+<!-- PHOTO GRID + VIEWER (removed from main page) -->
 
 <!-- APPWRITE SDK -->
 <script src="https://cdn.jsdelivr.net/npm/appwrite@14.0.0"></script>
@@ -195,12 +236,10 @@ const COLLECTION_ID = "sololeveling";
 const BUCKET_ID = "avatars";
 
 /* ================= UI ================= */
-menuBtn.onclick = () => sidebar.classList.toggle("show");
-
-/* Photos opens new page */
-function openPhotosPage() {
-  window.location.href = "photos.html";
-}
+menuBtn.onclick = () => {
+  sidebar.classList.toggle("show");
+  document.body.classList.toggle("blurred");
+};
 
 /* ================= AUTH ================= */
 async function checkLogin() {
@@ -220,9 +259,6 @@ async function onLoginSuccess() {
 }
 
 /* ================= MUSIC ================= */
-const bgMusic = document.getElementById("bgMusic");
-const equalizer = document.getElementById("equalizer");
-
 function toggleMusic() {
   if (bgMusic.paused) {
     bgMusic.muted = false;
@@ -271,6 +307,13 @@ async function loadMusicState() {
   );
 
   if (res.total && res.documents[0].musicOn) toggleMusic();
+}
+
+/* ================= PHOTOS ================= */
+async function openPhotos() {
+  sidebar.classList.remove("show");
+  document.body.classList.remove("blurred");
+  window.location.href = 'photos.html';
 }
 
 /* AUTO LOGIN */
